# cube

./: .gitignore  README.md  animator.py  build_dataset2_json.py  cube_model.py  extract_missing_frames.py  generate_dataset.py  generate_eval_dataset.py  main.py  organize_dataset.py  pyproject.toml  renderer.py  run_generate.sh  scramble.py
.github/workflows/: ci.yml
